# ImageDisplayQT

./: LICENSE  pyproject.toml  readme.md  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  customisation.rst  example.rst  getting_started.rst  graphs.rst  index.rst  overlays.rst
examples/: example_mono8.tif  graph_display_example.py  image_display_example.py
src/: image_display.py
