# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ImageDisplayQT"
version = "1.0.4"
description = "A widget for real time image display in PyQT GUIs."
readme = "README.md"
authors = [{ name = "Michael Hughes", email = "m.r.hughes@kent.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["imaging", "GUI", "display", "video", "PyQT", "QT", "scientific"]
dependencies = [
    "numpy >= 1.18",
    "Pillow>=9.3.0",
    "matplotlib>=3.3.4",
    "PyQT5>=5.15.0"
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/MikeHughesKent/ImageDisplayQT/"

